--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,56 @@
 .semi-portal {
     z-index: 9999 !important;
 }
+
+/* base css */
+.action-flex {
+    display: flex !important;
+}
+
+.action-text-primary{
+    color: #4e89f8;
+}
+.action-btn{
+    display: inline-block;
+    font-weight: 400;
+    color: #333333;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.28125rem 0.5625rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.125rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    color: #999;
+    border: none;
+    padding: 2px;
+    box-shadow: none;
+} 
+.action-btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+.action-icon-btn{
+    line-height: 1 !important;
+}
+
+
+action-flow-editor{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+.doc-feature-overview{
+    flex: 1;
+    height: 100%;
+    display: flex;
+}
+.gedit-playground-container{
+    flex: 1;
+    height: 100%;
+}
